--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=demo
+
+spring.output.ansi.enabled=ALWAYS
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/a3
+spring.datasource.username=root
+spring.datasource.password=salavo2021
+
+# cria/atualiza as tabelas no BD
+spring.jpa.hibernate.ddl-auto=update
+
+
+# JPA settings
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.jdbc.batch_size=15
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.show-sql=true
+spring.oracle.persistence.unit=sql
