--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=demo
 
-spring.datasource.url=jdbc:mysql://junction.proxy.rlwy.net:58911/a3
+spring.datasource.url=jdbc:mysql://localhost:3306/a3
 spring.datasource.username=root
-spring.datasource.password=wdbXSAycETPHLppZPvuHDNuuYKWMjfZI
+spring.datasource.password=root
 
 # cria/atualiza as tabelas no BD
 spring.jpa.hibernate.ddl-auto=update
